# prx

./: .env.example  .gitignore  .markdownlint-cli2.yaml  AGENTS.md  AUDIT_REPORT_2026-03-19.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-MIT  NOTICE  README.md  RUN_TESTS.md  SECURITY.md  SELF_EVOLUTION.md  TEST_AUDIT_REPORT.md  TEST_PROGRESS.md  clippy.toml  codex.md  deny.toml  docker-compose.yml  prx_chat_20260615_174448.md  signal-protocol-field-audit-crosscheck-2026-03-02.md
.cargo/: audit.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  (+1 more)
benches/: agent_benchmarks.rs  prompt_render.rs  router_decision.rs  tool_dispatch.rs
collab-outbox/: receipt-2026-07-05-parity-batch3b.md  receipt-2026-07-05-parity-batch3c.md  receipt-2026-07-09-visible-turns-phase4b1.md  receipt-2026-07-12-architecture-guards.md  receipt-2026-07-12-chat-dirty-baseline.md  receipt-2026-07-12-chat-persistence-sanitization.md  receipt-2026-07-12-cron-claim-lease.md  receipt-2026-07-12-cron-oneshot-terminal.md  receipt-2026-07-12-hybrid-memory-fail-closed.md  receipt-2026-07-12-process-worker-kill.md  receipt-2026-07-13-cron-process-parity.md  receipt-2026-07-15-backend-bypasses.md  receipt-2026-07-15-capability-catalog.md  receipt-2026-07-15-chat-agent-characterization.md  receipt-2026-07-15-chat-agent-turn-owner.md  receipt-2026-07-15-chat-event-readers.md  receipt-2026-07-15-chat-tool-execution-service.md  receipt-2026-07-15-compaction-provenance.md  receipt-2026-07-15-doctor-readonly-diagnostic.md  receipt-2026-07-15-gateway-idempotency-lifecycle.md  receipt-2026-07-15-health-readiness.md  receipt-2026-07-15-heartbeat-xin-retirement.md  receipt-2026-07-15-library-module-owner.md  receipt-2026-07-15-message-event-contract.md  receipt-2026-07-15-migration-readonly.md  receipt-2026-07-15-permission-simplification.md  receipt-2026-07-15-service-lifecycle-truth.md  receipt-2026-07-15-shared-terminal-commit.md  receipt-2026-07-15-stage9-media-multimodal.md  receipt-2026-07-15-stage9-nodes.md  receipt-2026-07-15-stage9-plugins-hooks.md  receipt-2026-07-15-stage9-providers-router-cost.md  receipt-2026-07-15-stage9-skills.md  receipt-2026-07-15-tool-execution-service.md  receipt-2026-07-15-transactional-config.md  receipt-2026-07-15-webhook-durable-transaction.md  receipt-2026-07-15-worker-config-source.md  receipt-2026-07-15-xin-lease-fencing.md  receipt-2026-07-15-xin-ordered-adoption.md  receipt-2026-07-15-xin-transactional-transitions.md  (+1 more)
config/: evolution_config.example.toml
console/: README.md  index.html  package-lock.json  package.json  vite.config.js
docs/: P4-implementation-plan.md  P5-implementation-plan.md  channels.md  chat-agent-loop-characterization.md  commands-reference.md  compliance-controls.md  concurrency-p2-pressure-fault.md  concurrency-p2-runbook.md  concurrency-p2-slo.md  config-reference.md  configuration.md  evolution.md  full-audit-2026-02-23-v2.md  full-audit-2026-02-23-v3.md  full-audit-2026-02-23.md  heartbeat-xin-materialization.md  host-function-reference.md  http3-eval.md  media-artifact-lifecycle.md  memory-access-control-audit-v2.md  memory-access-control-audit-v3.md  memory-access-control-audit.md  memory-access-control-design-v2.md  memory-access-control-design.md  memory-acl-implementation-audit-v2.md  memory-acl-implementation-audit-v3.md  memory-acl-implementation-audit-v4.md  memory-acl-implementation-audit-v5.md  memory-acl-implementation-audit.md  memory-acl-phase0-plan.md  multi-identity-sessions-spawn-example.md  openprx-unified-service-deploy-restart-sop.md  p0-2-bridge-prompt.md  p0-2-cron-config.toml  p0-self-system-plan.md  perf-baseline.md  plugin-developer-guide.md  plugin-runtime-lifecycle.md  port-allocation-168xx.md  provider-routing-cost-lifecycle.md  (+27 more)
examples/: custom_channel.rs  custom_memory.rs  custom_provider.rs  custom_tool.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_tool_call_json.rs
pdk/cli/: Cargo.toml  README.md
pdk/cli/src/: detect.rs  main.rs
pdk/cli/src/commands/: build.rs  mod.rs  new.rs  pack.rs  test.rs  validate.rs
pdk/python/: README.md  pyproject.toml
pdk/python/examples/hello-tool/: build.sh  plugin.py  plugin.toml
pdk/python/examples/logger-hook/: build.sh  plugin.py  plugin.toml
pdk/python/prx_pdk/: __init__.py  decorators.py  host.py  types.py
pdk/python/templates/tool/: plugin.py.tmpl  plugin.toml.tmpl
pdk/rust/examples/audit-hook/: Cargo.toml  README.md  plugin.toml
pdk/rust/examples/audit-hook/src/: lib.rs
pdk/rust/examples/base64-tool/: Cargo.toml  plugin.toml
pdk/rust/examples/base64-tool/src/: lib.rs
pdk/rust/examples/voice-talk-realtime/: Cargo.toml  plugin.toml
pdk/rust/examples/voice-talk-realtime/src/: bindings.rs  lib.rs
pdk/rust/examples/voice-talk-realtime/wit/: tool.wit  world.wit
pdk/rust/prx-pdk/: Cargo.toml  README.md
pdk/rust/prx-pdk/src/: lib.rs
pdk/rust/prx-pdk/wit/: package.wit  pdk-worlds.wit
python/: README.md
scripts/: bootstrap.sh  recompute_contributor_tiers.sh  s4_a_gate.sh
src/: capability.rs  evolution_cli.rs  identity.rs  lib.rs  main.rs  migration.rs  multimodal.rs  util.rs
task/: prx-llm-provider-upgrade-checklist.md
tasks/: memskill-integration.md
tests/: agent_e2e.rs  agent_loop_robustness.rs  architecture_boundaries.rs  channel_routing.rs  chat_perf_baseline.rs  chat_pty_e2e.rs  concurrent_agent_memory.rs  config_hotreload_authz_e2e.rs  config_hotreload_integration.rs  config_persistence.rs  dockerignore_test.rs  doctor_readonly_cli.rs  evolution_integration.rs  int_agent_gateway.rs  int_memory_delegate.rs  int_p1_cross_module.rs  int_security_scope.rs  int_tool_security.rs  memory_comparison.rs  memory_restart.rs  migration_readonly_cli.rs  proptest_prompt_render.rs  proptest_route_decision.rs  proptest_tool_call_json.rs  provider_resolution.rs  provider_schema.rs  reply_target_field_regression.rs  service_lifecycle_cli.rs  websocket_config_regression.rs  whatsapp_webhook_security.rs
web/: package-lock.json  package.json  svelte.config.js
wit/: worlds.wit
(+497 files in other folders)
