[workspace]
members = ["."]
resolver = "2"

[package]
name = "openprx"
version = "0.7.6"
edition = "2024"
authors = ["g1e2x87"]
license = "MIT OR Apache-2.0"
description = "OpenPRX: high-performance Rust-first autonomous agent runtime."
repository = "https://openprx.dev"
readme = "README.md"
keywords = ["ai", "agent", "cli", "assistant", "chatbot"]
categories = ["command-line-utilities", "api-bindings"]

[lib]
name = "openprx"
path = "src/lib.rs"

[[bin]]
name = "prx"
path = "src/main.rs"
bench = false

[[bench]]
name = "router_decision"
harness = false

[[bench]]
name = "prompt_render"
harness = false

[[bench]]
name = "tool_dispatch"
harness = false

[dependencies]
# CLI - minimal and fast
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# Async runtime - feature-optimized for size
tokio = { version = "1.42", default-features = false, features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync", "process", "io-std", "fs", "signal"] }
tokio-util = { version = "0.7", default-features = false }

# HTTP client - minimal features
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking", "multipart", "stream", "socks", "http2"] }

# Matrix client + E2EE decryption
matrix-sdk = { version = "0.16", optional = true, default-features = false, features = ["e2e-encryption", "rustls-tls", "markdown"] }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }

# Config
directories = "6.0"
toml = "1.0"
shellexpand = "3.1"

# JSON Schema generation for config export
schemars = "1.2"

# Logging - minimal
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter"] }
tracing-appender = "0.2"

# Observability - Prometheus metrics
prometheus = { version = "0.14", default-features = false }

# Base64 encoding (image data)
base64 = "0.22"

# URL encoding for web search
urlencoding = "2.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# String similarity for tool name suggestions
strsim = "0.11"

# UUID generation
uuid = { version = "1.11", default-features = false, features = ["v4", "v7", "std"] }

# Authenticated encryption (AEAD) for secret store
chacha20poly1305 = "0.10"

# HMAC for webhook signature verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
# JWT verification for MCP bearer / A2A peer identity (compat gateway)
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
crc32fast = "1.4"
constant_time_eq = "0.4"
subtle = "2.6"

# CSPRNG for secure token generation
rand = "0.10"

# serde-big-array for wa-rs storage (large array serialization)
serde-big-array = { version = "0.5", optional = true }

# Fast mutexes that don't poison on panic
parking_lot = "0.12"

# Lock-free config hot-swap (P1.5)
arc-swap = "1.8.2"

# File-system watcher + debouncer for config hot-reload (P1.5)
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"

# Async traits
async-trait = "0.1"
# MCP client (stdio + streamable HTTP)
rmcp = { version = "0.14", features = ["client", "server", "transport-child-process", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }

# HMAC-SHA256 (Zhipu/GLM JWT auth)
ring = "0.17"

# Protobuf encode/decode (Feishu WS long-connection frame codec)
prost = { version = "0.14", default-features = false }

# Memory / persistence
rusqlite = { version = "0.37", features = ["bundled"] }
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
chrono-tz = "0.10"
cron = "0.15"

# Interactive CLI prompts
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
console = "0.16"

# Terminal chat UI
crossterm = { version = "0.28", default-features = false, features = ["events", "bracketed-paste", "windows"] }

# TUI advanced features (Phase 3) — gated behind terminal-tui feature
ratatui = { version = "0.30", optional = true, default-features = false, features = ["crossterm", "scrolling-regions"] }
syntect = { version = "5.2", optional = true, default-features = false, features = ["parsing", "default-syntaxes", "default-themes", "html", "dump-load", "dump-create", "regex-fancy"] }
unicode-width = { version = "0.2", optional = true }
# Interactive PTY shell sessions (v3 of the chat session runtime). Cross-platform
# pseudo-terminal: openpty on Unix, ConPTY on Windows. Gated behind terminal-tui
# because the interactive PTY is a full-screen terminal handoff of the chat TUI
# (the non-TUI reedline path never enters PTY handoff and so does not need it).
portable-pty = { version = "0.9", optional = true }
# In-process terminal emulator (v3b-b): parses PTY output into a screen grid so a
# re-attach can redraw the *current* screen state (vim/htop) instead of replaying
# raw bytes (which leaves full-screen programs scrambled for a frame). Pure Rust
# (vte/itoa/unicode-width — no C/native deps), so it cross-compiles cleanly to
# every release target. Gated with portable-pty under terminal-tui.
vt100 = { version = "0.16.2", optional = true }

# Binary discovery (init system detection)
which = "7.0"

# WebSocket client channels (Discord/Lark/DingTalk)
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
futures = "0.3"
regex = "1.10"
unicode-normalization = "0.1"
hostname = "0.4.2"
rustls = "0.23"
rustls-pki-types = "1.14.0"
# X.509 SVID parsing for SPIFFE peer verification (PEM/DER decode, SAN URI,
# validity, chain signature check against a trust bundle CA).
x509-parser = { version = "0.18", features = ["verify"] }
tokio-rustls = "0.26.4"
webpki-roots = "1.0.6"
skillratings = { version = "0.27", optional = true }
tiktoken-rs = { version = "0.5", optional = true }

# WASM Plugin System (optional)
wasmtime = { version = "45.0.3", optional = true, default-features = false, features = ["async", "component-model", "cranelift", "cache"] }
wasmtime-wasi = { version = "45.0.3", optional = true }

# email
lettre = { version = "0.11.19", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }
mail-parser = "0.11.2"
async-imap = { version = "0.11",features = ["runtime-tokio"], default-features = false }

# HTTP server (gateway) — replaces raw TCP for proper HTTP/1.1 compliance
axum = { version = "0.8", default-features = false, features = ["http1", "http2", "json", "tokio", "query", "ws", "macros", "multipart"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", default-features = false, features = ["limit", "timeout"] }
http-body-util = "0.1"
rust-embed = "8.5"

# OpenTelemetry — OTLP trace + metrics export.
# Use the blocking HTTP exporter client to avoid Tokio-reactor panics in
# OpenTelemetry background batch threads when ZeroClaw emits spans/metrics from
# non-Tokio contexts.
opentelemetry = { version = "0.31", default-features = false, features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["trace", "metrics", "http-proto", "reqwest-blocking-client", "reqwest-rustls-webpki-roots"] }

# probe-rs for STM32/Nucleo memory read (Phase B)
probe-rs = { version = "0.31", optional = true }

tokio-stream = { version = "0.1.18", features = ["full"] }

# Temporary directory for zero-config `prx go` workspace
tempfile = "3.14"

# WhatsApp Web client (wa-rs) — optional, enable with --features whatsapp-web
# Uses wa-rs for Bot and Client, wa-rs-core for storage traits, custom rusqlite backend avoids Diesel conflict.
wa-rs = { version = "0.2", optional = true, default-features = false }
wa-rs-core = { version = "0.2", optional = true, default-features = false }
wa-rs-binary = { version = "0.2", optional = true, default-features = false }
wa-rs-proto = { version = "0.2", optional = true, default-features = false }
wa-rs-ureq-http = { version = "0.2", optional = true }
wa-rs-tokio-transport = { version = "0.2", optional = true, default-features = false }

# Raspberry Pi GPIO / Landlock (Linux only) — target-specific to avoid compile failure on macOS
[target.'cfg(target_os = "linux")'.dependencies]
rppal = { version = "0.22", optional = true }
landlock = { version = "0.4", optional = true }

# Unix-specific dependencies (for root check, etc.)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["channel-matrix", "llm-router", "wasm-plugins", "sandbox-landlock", "terminal-tui"]
channel-matrix = ["dep:matrix-sdk"]
peripheral-rpi = ["rppal"]
# Sandbox feature aliases used by cfg(feature = "sandbox-*")
sandbox-landlock = ["dep:landlock"]
sandbox-bubblewrap = []
# Backward-compatible alias for older invocations
landlock = ["sandbox-landlock"]
# probe = probe-rs for Nucleo memory read (adds ~50 deps; optional)
probe = ["dep:probe-rs"]
# whatsapp-web = Native WhatsApp Web client with custom rusqlite storage backend
whatsapp-web = ["dep:wa-rs", "dep:wa-rs-core", "dep:wa-rs-binary", "dep:wa-rs-proto", "dep:wa-rs-ureq-http", "dep:wa-rs-tokio-transport", "serde-big-array"]
# WASM plugin system (wasmtime + Component Model)
wasm-plugins = ["dep:wasmtime", "dep:wasmtime-wasi"]
llm-router = ["dep:skillratings", "dep:tiktoken-rs"]
# Terminal TUI advanced features (Phase 3): ratatui layout, syntect highlighting,
# CJK width, and interactive PTY shell sessions (v3 terminal handoff).
terminal-tui = ["dep:ratatui", "dep:syntect", "dep:unicode-width", "dep:portable-pty", "dep:vt100"]
# test-mock = expose an in-process MockProvider as the `"mock"` provider name so
# PTY end-to-end tests can drive `prx chat` without hitting any real LLM.
# Implementation: src/providers/router.rs + src/providers/mod.rs (factory match).
test-mock = []

[profile.release]
opt-level = "z"      # Optimize for size
lto = "thin"         # Lower memory use during release builds
codegen-units = 8    # Parallel codegen — CI runners need this (codegen-units=1 OOMs on 7GB)
strip = true          # Remove debug symbols
panic = "abort"      # Reduce binary size

[profile.ci]
inherits = "release"
lto = false           # No LTO — CI runners only have 7GB RAM
codegen-units = 16    # More units = less memory per unit
opt-level = 2         # Standard optimization (less memory than "z")

[profile.release-fast]
inherits = "release"
codegen-units = 8
                     # Use: cargo build --profile release-fast

[profile.dist]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
# PTY-driven end-to-end tests for `prx chat` (see tests/chat_pty_e2e.rs).
expectrl = "0.7"
proptest = "1.6"
rcgen = "0.14"
# Serialize PTY tests that share controlling-tty resources, without forcing
# `--test-threads=1` on the whole test binary.
serial_test = "3"

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
indexing_slicing = "deny"

dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
undocumented_unsafe_blocks = "deny"

inefficient_to_string = "deny"
large_futures = "warn"

# Nursery lints that require deep refactoring — allow for now
significant_drop_tightening = "allow"
future_not_send = "allow"
redundant_pub_crate = "allow"

# Pedantic style lints — allow non-critical ones
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
cognitive_complexity = "allow"
excessive_nesting = "allow"
pub_with_shorthand = "allow"
single_option_map = "allow"
trait_duplication_in_bounds = "allow"
large_stack_frames = "allow"
too_long_first_doc_paragraph = "allow"

cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_precision_loss = "warn"
cast_lossless = "warn"

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["probe-rs", "serde-big-array", "tiktoken-rs"]  # optional/feature-gated deps
